Made star icons work, fixed spinbox when therse no data and spinbox jumping to page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>MangaDB</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='fontawesome-all.css') }}">
 <div class=page>
   <h1>MangaDB</h1>
   <div class=metanav>
@@ -10,37 +11,3 @@
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
-<script type="text/javascript">
-// this is asynchronous - result comes back to callback later, while this returns immediately
-// -----------------------------------------------------------------------=======------------
-function callAjax(url, callback)
-{
-	var xmlhttp;
-	// compatible with IE7+, Firefox, Chrome, Opera, Safari
-	xmlhttp = new XMLHttpRequest();
-	xmlhttp.onreadystatechange = function()
-	{
-		if (xmlhttp.readyState == 4 && xmlhttp.status == 200)
-		{
-			callback(xmlhttp.responseText);
-		}
-	}
-	xmlhttp.open("GET", url, true);
-	xmlhttp.send();
-}
-
-function cb_myCallback(theStuff)
-{
-    // process theStuff here. If it's JSON data, you can unpack it trivially in Javascript,
-    // as I will describe later. For this example, it's just text. You're going to get
-    // back "hello, Ben"
-    console.log(theStuff);
-}
-
-function pyRequest(upd_data,upd_callback)
-{
-var cd_url;
-	cd_url = '/test.py?myData=' + encodeURIComponent(upd_data);
-	callAjax(cd_url,upd_callback);
-}
-</script>
