Lazyloading of imgs

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,8 @@
 <title>MangaDB</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='fontawesome-all.css') }}">
+{# src https://appelsiini.net/projects/lazyload or https://github.com/tuupola/jquery_lazyload/tree/2.x #}
+<script src="{{ url_for('static', filename='lazyload.js') }}"></script>
 <div class=page>
   <h1>MangaDB</h1>
   <div class=metanav>
