--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <title>MangaDB</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='fontawesome-all.css') }}">
+{# <link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap.min.css') }}"> #}
+{# instead of manually coping over stuff from tsuminos html and css im just using their stylesheet now #}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='tsucss.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 {# src https://appelsiini.net/projects/lazyload or https://github.com/tuupola/jquery_lazyload/tree/2.x #}
 <script src="{{ url_for('static', filename='lazyload.js') }}"></script>
+{# <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script> #}
 <div class=page>
   <h1>MangaDB</h1>
   <div class=metanav>
   </div>
   {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
+    <div class="flash dark-color">{{ message }}</div>
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
